Add Section 2: CIS Readiness × Climate Hazard Intersection
- Implemented bivariate choropleth map showing CIS readiness vs climate hazards
- Added support for drought (NDWS-mean) and waterlogging (NDWL0-mean) hazards
- Integrated with Section 1's hierarchical admin selectors for consistent UX
- Added 3x3 bivariate legend with priority zone indicator
- Implemented dynamic insights showing opportunity and investment gaps
- Added table view with sortable columns and priority levels
- Included download functionality for filtered data
- Map auto-zooms to selected regions from Section 1
- Bilingual support (EN/FR) for all UI elements

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -36,6 +36,8 @@ overviewContent = _lang(cis.overviewContent);
 
 {{< include _cis_readiness_index.qmd >}}
 
+{{< include _cis_hazard_intersection.qmd >}}
+
 # `{ojs} appendix` {#appendix}
 
 ```{ojs}
