Fix: Remove HTMLDivElement display in Section 2 breadcrumb

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -144,9 +144,11 @@ viewof s2ViewToggle = Inputs.radio(
 //| echo: false
 
 // Display current selection from Section 1
-html`<div style="padding: 10px; background: #f0f0f0; border-radius: 5px; margin: 10px 0;">
-  <strong>${_lang(cis.currentSelection)}:</strong> ${breadcrumb}
-</div>`
+{
+  yield html`<div style="padding: 10px; background: #f0f0f0; border-radius: 5px; margin: 10px 0;">
+    <strong>${_lang(cis.currentSelection)}:</strong> ${breadcrumb}
+  </div>`;
+}
 ```
 
 ```{ojs}
