Fix: Remove HTMLDivElement display from insights section

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -508,7 +508,7 @@ s2Insights = {
   
   const insight2 = `**${percentGap}%** of High-${hazardName} areas have Low CIS Readiness—priority gaps for station and forecast investment.`;
   
-  return html`
+  yield html`
     <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-top: 20px;">
       <h4 style="margin-top: 0;">Key Insights</h4>
       <p style="margin: 10px 0;"><strong>Opportunity:</strong> ${md([insight1])}</p>
@@ -516,8 +516,6 @@ s2Insights = {
     </div>
   `;
 }
-
-s2Insights
 ```
 
 ```{ojs}
