Fix: Move atlasHero call after nbTitle definition to fix import errors

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -15,12 +15,9 @@ date-edited: today
 import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
 import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
 
-hero_url = "./../../images/default_crop.webp";
 cis = await FileAttachment(
   "/data/cis/translations.json",
 ).json();
-
-atlasHero(nbTitle, hero_url);
 ```
 
 ```{ojs}
@@ -72,6 +69,11 @@ nbTitle = _lang({
   en: "Identifying Climate Information Readiness",
   fr: "Identifiant la Readiness des informations climatiques",
 });
+
+// Display hero after nbTitle is defined
+hero_url = "./../../images/default_crop.webp";
+atlasHero(nbTitle, hero_url);
+
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
 heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
 heading2 = _lang({ en: "Heading 2", fr: "Titre 2" });
