Fix: Move imports to Source code section to ensure they load before included files

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -11,10 +11,6 @@ date-edited: today
 ---
 
 ```{ojs}
-// Import all UI components at once to avoid duplication
-import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
-import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
-
 cis = await FileAttachment(
   "/data/cis/translations.json",
 ).json();
@@ -60,6 +56,14 @@ This is useful to hide all of the code, master selectors (language, admin level,
 and other things that are needed for the notebook to run but would be messy if
 actually appearing in the notebook.
 -->
+
+<!-- Import UI Components FIRST -->
+
+```{ojs}
+// Import all UI components at once to avoid duplication
+import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
+```
 
 <!-- Text and Language Translations -->
 
