feat(components - admin): Add new multi-select for admin regions and update the individual region select input. Added translation for district as well.

--- a/components/_adminSelectors.qmd
+++ b/components/_adminSelectors.qmd
@@ -75,6 +75,25 @@ dataAdmin1,
 ```
 
 ```{ojs}
+// Admin2
+dataAdmin2 = await adminDB.query(`
+  SELECT DISTINCT admin0_name, admin1_name, admin2_name, iso3
+  FROM admin_lookup
+  WHERE iso3 = '${admin0Select.iso3c}'
+  AND admin1_name = '${admin1Select.admin1_name}'
+`)
+
+dataAdmin2
+
+viewof admin2Select = Inputs.select(
+  dataAdmin2,
+  {
+    format: (d) => d.admin2_name
+  }
+)
+```
+
+```{ojs}
 // Admin form generator
 admin01Form = () => {
   const admin0 = Inputs.bind(
@@ -115,4 +134,54 @@ admin01Form = () => {
 }
 
 admin01Form()
+
+admin012Form = () => {
+  const admin0 = Inputs.bind(
+    Inputs.select(
+        countries,
+        {
+        //NOTE: _lang & general_translations are defined in 
+        // components/_lang.qmd
+        //Both must be loaded into a notebook for this to work.
+          label: _lang(general_translations.country),
+          format: (d) => _lang(d.translation),
+        }
+      ),
+    viewof admin0Select
+  )
+
+  const admin1 = Inputs.bind(
+    Inputs.select(
+        dataAdmin1,
+        {
+          label: _lang(general_translations.region),
+          format: (d) => d.admin1_name,
+        }
+      ),
+    viewof admin1Select
+  )
+
+  const admin2 = Inputs.bind(
+    Inputs.select(
+        dataAdmin2,
+        {
+          label: _lang(general_translations.district),
+          format: (d) => d.admin2_name,
+        }
+      ),
+    viewof admin2Select
+  )
+
+  return Inputs.form(
+    [
+      admin0,
+      admin1,
+      admin2
+    ],
+    {
+      template: (inputs) =>
+        html`<div style="display: flex; gap: 2em;">${inputs}</div>`,
+    }
+  )
+}
 ```
