--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -17,6 +17,14 @@ cis = await FileAttachment(
 ```
 
 ```{ojs}
+//| echo: false
+
+// Hero section - nbTitle and hero_url are defined in source code section
+hero_url = "./../../images/default_crop.webp";
+atlasHero(nbTitle, hero_url);
+```
+
+```{ojs}
 overviewTitle = _lang(cis.overviewTitle);
 overviewContent = _lang(cis.overviewContent);
 
@@ -71,10 +79,6 @@ nbTitle = _lang({
   en: "Identifying Climate Information Readiness",
   fr: "Identifiant la Readiness des informations climatiques",
 });
-
-// Display hero after nbTitle is defined
-hero_url = "./../../images/default_crop.webp";
-atlasHero(nbTitle, hero_url);
 
 // key_insights = _lang({en: "Key Insights", fr: "Résumé"})
 heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
