refactor(adminSelectorsMulti): swap out view of input.select for more clean and concise input.input

--- a/components/_adminSelectorsMulti.qmd
+++ b/components/_adminSelectorsMulti.qmd
@@ -54,13 +54,7 @@ countries = {
   return filteredCountries;
 };
 
-viewof admin0Select = Inputs.select(
-  countries,
-  {
-    format: (d) => d.iso3c,
-    multiple: true
-  },
-)
+viewof admin0Select = Inputs.input(Object.values(countries).slice(0, 2))
 
 renderA0Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => {
     const _admin0 = Inputs.select(countries, {
@@ -96,13 +90,7 @@ dataAdmin1 = {
   // return regions
 }
 
-viewof admin1Select = Inputs.select(
-dataAdmin1,
-    {
-      format: (d) => d.admin1_name,
-      multiple: true
-    }
-)
+viewof admin1Select = Inputs.input([])
 
 renderA1Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => {
     const _admin1 = Inputs.select(
@@ -127,13 +115,7 @@ dataAdmin2 = await adminDB.query(`
   AND admin1_name in ('${admin1Select.map((d) => d.admin1_name).join("', '")}')
 `)
 
-viewof admin2Select = Inputs.select(
-  dataAdmin2,
-  {
-    format: (d) => d.admin2_name,
-    multiple: true
-  }
-)
+viewof admin2Select = Inputs.input([])
 
 renderA2Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => {
     const _admin2 = Inputs.select(
