--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -187,7 +187,7 @@ expVariable = ["vop_intld15", "vop_usd15"];
 periods = ["annual", "jagermeyr"];
 severity = ["moderate", "severe", "extreme"];
 
-viewof mainHazVar = Inputs.input("vop_intld15")
+viewof mainHazVar = Inputs.input("vop_usd15")
 viewof mainHazPeriod = Inputs.input("annual")
 viewof mainHazSev = Inputs.input("severe")
 ```
