fix(exposure data): Fix and add query for exposure data path

--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -72,7 +72,8 @@ inputTemplate()([section1A0, section1A1, section1A2]);
 ```
 
 ```{ojs}
-// Test queries
+// Example queries
+getExposureData();
 getHistoricData();
 getProjectedData();
 ```
@@ -170,6 +171,23 @@ getProjectedData = async () => {
     SELECT *
     FROM read_parquet("${S3HazExposurePath(mainHazVar, mainHazPeriod, "ENSEMBLE", mainHazSev)}")
     WHERE iso3 in ('${admin0Select.map((d) => d.iso3c).join("', '")}')
+    LIMIT 5
+  `);
+  return resp;
+};
+
+getExposureData = async () => {
+  //TODO: this is technically incorrect as the usd column in the exposure table is vop_usd21
+  // but due to some data issues, this is what we have to do for now.
+  const resp = await db.query(`
+    SELECT *,
+      CASE unit
+        WHEN 'intld15' THEN 'vop_intld15'
+        WHEN 'usd' THEN 'vop_usd15'
+      END AS variable
+    FROM exposure
+    WHERE iso3 in ('${admin0Select.map((d) => d.iso3c).join("', '")}')
+    AND variable = '${mainHazVar}'
     LIMIT 5
   `);
   return resp;
