feat(notebook): Update sections to use the std library

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -229,45 +229,53 @@ methodsData = _lang(general_translations.methodsData);
 ```{ojs}
 //TODO: Move to shared helpers
 // format number, short notation
-formatNumCompactShort = ({ locale = "en-US" } = {}) =>
-  new Intl.NumberFormat(locale, {
-    notation: "compact",
-    compactDisplay: "short",
-  }).format;
 
-// format number, to significant figures
-formatNumCompactSigFigs = ({ locale = "en-US", sigFigs = 3 } = {}) => {
-  // Return a formatting function
-  return (number) => {
-    // Adjust number to specified significant figures
-    const formattedNumber = Number(number).toLocaleString(locale, {
-      maximumSignificantDigits: sigFigs,
-      notation: "compact",
-      compactDisplay: "short",
-    });
+import {
+  inputTemplate,
+  formatNumCompactShort,
+  formatUSD,
+  generateDB,
+} from "/helpers/std.ojs";
 
-    return formattedNumber;
-  };
-};
-
-function formatUSD({ locale = "en-US" } = {}) {
-  const formatter = formatNumCompactShort({ locale });
-
-  return (number) => {
-    const formattedNum = formatter(number);
-    return "$" + formattedNum;
-  };
-}
+// formatNumCompactShort = ({ locale = "en-US" } = {}) =>
+//   new Intl.NumberFormat(locale, {
+//     notation: "compact",
+//     compactDisplay: "short",
+//   }).format;
+//
+// // format number, to significant figures
+// formatNumCompactSigFigs = ({ locale = "en-US", sigFigs = 3 } = {}) => {
+//   // Return a formatting function
+//   return (number) => {
+//     // Adjust number to specified significant figures
+//     const formattedNumber = Number(number).toLocaleString(locale, {
+//       maximumSignificantDigits: sigFigs,
+//       notation: "compact",
+//       compactDisplay: "short",
+//     });
+//
+//     return formattedNumber;
+//   };
+// };
+//
+// function formatUSD({ locale = "en-US" } = {}) {
+//   const formatter = formatNumCompactShort({ locale });
+//
+//   return (number) => {
+//     const formattedNum = formatter(number);
+//     return "$" + formattedNum;
+//   };
+// }
+//
+// // template for observable input forms
+// inputTemplate = ({ gap = "2em" } = {}) => {
+//   // template for input display
+//   return (inputs) =>
+//     html`<div style="display: flex; gap: ${gap};">${inputs}</div>`;
+// };
 ```
 
 ```{ojs}
-// template for observable input forms
-inputTemplate = ({ gap = "2em" } = {}) => {
-  // template for input display
-  return (inputs) =>
-    html`<div style="display: flex; gap: ${gap};">${inputs}</div>`;
-};
-
 // create where clause that handles null cases
 sqlWhereNull = ({ value, field } = {}) => {
   return value === null ? `and ${field} is null` : `and ${field} = '${value}'`;
@@ -326,34 +334,6 @@ NavbarLangSelector(languages, masterLanguage)
 ## Data
 
 ### Database
-
-```{ojs}
-generateDB = async (data_obj) => {
-  let data = data_obj;
-  const _db = await DuckDBClient.of();
-
-  // loop through datasets
-  for (const d of data) {
-    if (!d.key || d.key.trim() === "") continue;
-    let path = d.s3_path || d.local_path; //ToDO swap priotities
-    let view = d.sql.table ? "TABLE" : "VIEW";
-    let query = d.sql.query;
-    if (!query) {
-      // use default query
-      query = `CREATE ${view} "${d.key}" AS SELECT * FROM read_parquet("${path}");`;
-    } else {
-      query = `
-        CREATE ${view} "${d.key}" AS
-          SELECT ${query.select} 
-          FROM read_parquet("${path}")
-          WHERE ${query.where.join(" AND ")};`;
-    }
-    await _db.query(query);
-  }
-
-  return await _db;
-};
-```
 
 ```{ojs}
 data_obj = {
