--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -39,6 +39,8 @@ overviewContent = _lang(cis.overviewContent);
 
 {{< include _cis_hazard_intersection.qmd >}}
 
+{{< include _cis_implementation.qmd >}}
+
 # `{ojs} appendix` {#appendix}
 
 ```{ojs}
