--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -781,22 +781,28 @@ s3Insights = {
       <em>Download will be available once data is loaded</em>
     </div>`;
   } else {
+    // Helper function to safely format numbers
+    const safeFormat = (value, decimals) => {
+      if (value == null || isNaN(value)) return "N/A";
+      return value.toFixed(decimals);
+    };
+    
     yield downloadButton(
       s3SortedData.map(d => ({
-        "Country": d.admin0_name,
-        "ISO3": d.iso3,
-        "CIS Readiness Raw": d.cis_readiness_avg?.toFixed(3) || "N/A",
-        "CIS Readiness Class": d.readinessClass,
-        "TV Access %": d.tv_pct !== null ? d.tv_pct.toFixed(1) : "N/A",
-        "TV Access 0-1": d.tv_norm !== null ? d.tv_norm.toFixed(3) : "N/A",
-        "Internet Access %": d.internet_pct !== null ? d.internet_pct.toFixed(1) : "N/A",
-        "Internet Access 0-1": d.internet_norm !== null ? d.internet_norm.toFixed(3) : "N/A",
-        "Cellphone Access %": d.cellphone_pct !== null ? d.cellphone_pct.toFixed(1) : "N/A",
-        "Cellphone Access 0-1": d.cellphone_norm !== null ? d.cellphone_norm.toFixed(3) : "N/A",
-        "Combined Access %": d.combined_pct !== null ? d.combined_pct.toFixed(1) : "N/A",
-        "Combined Access 0-1": d.combined_norm !== null ? d.combined_norm.toFixed(3) : "N/A",
-        "Gap (Access - Readiness)": d.gap !== null ? d.gap.toFixed(3) : "N/A",
-        "Bivariate Category": d.bivariateClass
+        "Country": d.admin0_name || "N/A",
+        "ISO3": d.iso3 || "N/A",
+        "CIS Readiness Raw": safeFormat(d.cis_readiness_avg, 3),
+        "CIS Readiness Class": d.readinessClass || "N/A",
+        "TV Access %": safeFormat(d.tv_pct, 1),
+        "TV Access 0-1": safeFormat(d.tv_norm, 3),
+        "Internet Access %": safeFormat(d.internet_pct, 1),
+        "Internet Access 0-1": safeFormat(d.internet_norm, 3),
+        "Cellphone Access %": safeFormat(d.cellphone_pct, 1),
+        "Cellphone Access 0-1": safeFormat(d.cellphone_norm, 3),
+        "Combined Access %": safeFormat(d.combined_pct, 1),
+        "Combined Access 0-1": safeFormat(d.combined_norm, 3),
+        "Gap (Access - Readiness)": safeFormat(d.gap, 3),
+        "Bivariate Category": d.bivariateClass || "N/A"
       })),
       `cis_implementation_${s3AccessType}_access`,
       _lang(cis.downloadLabel)
