--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -18,6 +18,8 @@ import {
 
 import { cleanAdminInput_SQL } from "/helpers/data.js";
 
+import { enhancedMultiSelect } from "/helpers/enhancedMultiSelect.ojs";
+
 atlasHero(nbTitle, hero_url);
 ```
 
@@ -32,8 +34,15 @@ md`${_lang(nbText.sections.intro.text)}`; // wrapped in md for lists to work
 `{ojs} _lang(nbText.sections.keyFacts.introText)`
 
 ```{ojs}
-admin01Form();
+section1A0 = renderA0Multi({ maxSelections: 2, requireAtLeastOne: true });
+section1A1 = renderA1Multi({ maxSelections: 3 });
+inputTemplate()([section1A0, section1A1]);
 
+admin1Select;
+admin0Select;
+```
+
+```{ojs}
 povBar_keyFacts();
 
 gdpBar_keyFacts();
@@ -47,8 +56,6 @@ viewof prod_type = Inputs.select([null, ...Object.keys(exposure_groups)], {
 });
 
 exposureBars_keyFacts();
-
-exposure_plotData
 ```
 
 `{ojs} downloadButton(exposure_plotData, "commodityProduction")`
@@ -227,52 +234,13 @@ methodsData = _lang(general_translations.methodsData);
 ### formatters
 
 ```{ojs}
-//TODO: Move to shared helpers
-// format number, short notation
-
 import {
   inputTemplate,
   formatNumCompactShort,
   formatUSD,
   generateDB,
+  loaderDiv,
 } from "/helpers/std.ojs";
-
-// formatNumCompactShort = ({ locale = "en-US" } = {}) =>
-//   new Intl.NumberFormat(locale, {
-//     notation: "compact",
-//     compactDisplay: "short",
-//   }).format;
-//
-// // format number, to significant figures
-// formatNumCompactSigFigs = ({ locale = "en-US", sigFigs = 3 } = {}) => {
-//   // Return a formatting function
-//   return (number) => {
-//     // Adjust number to specified significant figures
-//     const formattedNumber = Number(number).toLocaleString(locale, {
-//       maximumSignificantDigits: sigFigs,
-//       notation: "compact",
-//       compactDisplay: "short",
-//     });
-//
-//     return formattedNumber;
-//   };
-// };
-//
-// function formatUSD({ locale = "en-US" } = {}) {
-//   const formatter = formatNumCompactShort({ locale });
-//
-//   return (number) => {
-//     const formattedNum = formatter(number);
-//     return "$" + formattedNum;
-//   };
-// }
-//
-// // template for observable input forms
-// inputTemplate = ({ gap = "2em" } = {}) => {
-//   // template for input display
-//   return (inputs) =>
-//     html`<div style="display: flex; gap: ${gap};">${inputs}</div>`;
-// };
 ```
 
 ```{ojs}
@@ -367,6 +335,7 @@ dbFutureHive = {
 
 ```{ojs}
 gdp_plotData = {
+  const _iso3 = admin0Select.map((d) => d.iso3c);
   const resp = await db.query(`
     SELECT iso3,
       sector,
@@ -374,18 +343,20 @@ gdp_plotData = {
       gdp_usd2015,
       ROUND(
           gdp_usd2015
-            / SUM(CASE WHEN sector = 'total' THEN gdp_usd2015 END)
+            / SUM(CASE WHEN sector != 'total' THEN gdp_usd2015 END)
               OVER (PARTITION BY iso3, year),
-          1
+          4
         ) * 100 AS pct_of_total
     FROM a0_gdp
-    WHERE iso3 = '${admin0Select.iso3c}'
+    WHERE iso3 in ('${_iso3.join("', '")}')
+    AND sector != 'total'
     AND year = 2022
   `)
   return resp
 }
 
 landuse_plotData = {
+  const _iso3 = admin0Select.map((d) => d.iso3c);
   const resp = await db.query(`
     SELECT iso3,
       sub_group,
@@ -394,7 +365,7 @@ landuse_plotData = {
       ha,
       ha_pct
     FROM a0_landuse
-    WHERE iso3 = '${admin0Select.iso3c}'
+    WHERE iso3 in ('${_iso3.join("', '")}')
     AND year = 2021
   `)
   return resp
@@ -407,8 +378,8 @@ landuse_plotData
 
 ```{ojs}
 pov_plotData = {
-  const _iso3 = admin0Select.iso3c;
-  const _admin1 = admin1Select.admin1_name;
+  const _iso3 = admin0Select.map((d) => d.iso3c);
+  const _admin1 = admin1Select.map((d) => cleanAdminInput_SQL(d.admin1_name));
 
   const resp = await db.query(`
     SELECT 
@@ -430,10 +401,12 @@ pov_plotData = {
         ('not_poverty')
     ) AS g(group_name)
     WHERE 1=1
-      ${sqlWhereNull({ field: "iso3", value: _iso3 })}
-      ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
+    AND iso3 in ('${_iso3.join("', '")}')
+    AND (
+     admin1_name in ('${_admin1.join("', '")}')
+     OR admin1_name IS NULL
+    )
   `);
-
 
   const data = resp.map(row => ({
     ...row,
@@ -447,16 +420,18 @@ pov_plotData = {
 
 ```{ojs}
 exposure_plotData = {
-  const _iso3 = admin0Select.iso3c;
-  const _admin1 = admin1Select.admin1_name;
-  const _season = seasonSelect.season;
+  const _iso3 = admin0Select.map((d) => d.iso3c);
+  const _admin1 = admin1Select.map((d) => cleanAdminInput_SQL(d.admin1_name));
 
   const resp = await db.query(`
   SELECT *
   FROM exposure
     WHERE 1=1
-    ${sqlWhereNull({ field: "iso3", value: cleanAdminInput_SQL(_iso3)})}
-    ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
+    AND iso3 in ('${_iso3.join("', '")}')
+    AND (
+     admin1_name in ('${_admin1.join("', '")}')
+     OR admin1_name IS NULL
+    )
   `);
 
   const data = resp.map(row => ({
@@ -769,7 +744,9 @@ hazardExposure_plotData
 
 #### Admin Regions
 
-{{< include /components/_adminSelectors.qmd >}}
+<!-- {{< include /components/_adminSelectors.qmd >}} -->
+
+{{< include /components/_adminSelectorsMulti.qmd >}}
 
 #### Climate data
 
@@ -871,15 +848,21 @@ exposureBars_keyFacts = function () {
     _data = Array.from(
       d3.rollup(
         dataCategories,
-        (v) => d3.sum(v, (d) => d.value),
-        (d) => d.admin0_name,
+        (v) => ({
+          value: d3.sum(v, (d) => d.value),
+          iso3: v[0].iso3,
+          admin1_name: v[0].admin1_name,
+        }),
+        (d) => d.adminName,
         (d) => d.category,
       ),
-      ([admin0_name, catMap]) =>
-        Array.from(catMap, ([category, value]) => ({
-          admin0_name,
+      ([adminName, catMap]) =>
+        Array.from(catMap, ([category, obj]) => ({
+          adminName,
           crop: category,
-          value,
+          value: obj.value,
+          iso3: obj.iso3,
+          admin1_name: obj.admin1_name,
         })),
     ).flat();
   } else {
@@ -907,9 +890,14 @@ exposureBars_keyFacts = function () {
   return Plot.plot({
     width,
     height: 400,
-    marginLeft: 120,
-    marginBottom: 50,
+    marginLeft: 30,
+    marginBottom: 30,
     marginTop: 30,
+    subtitle: "Agricultural Production",
+    caption: multiLineText([
+      "Data is from 2020, measured in 2021 US dollars",
+      "Source: MapSpam 2020 SSA Adaptation Atlas",
+    ]),
 
     x: {
       axis: "bottom",
@@ -919,11 +907,11 @@ exposureBars_keyFacts = function () {
       tickFormat: formatUSD(),
     },
 
-    y: { label: "Category" },
+    y: { label: null },
 
     facet: {
       data: _data,
-      x: "admin0_name",
+      x: "adminName",
     },
 
     color: {
@@ -955,12 +943,10 @@ function createStackedBarChart({
 
   // Chart dimensions
   width,
-  heightPerRow = 110,
+  heightPerRow = 100,
 
   // Color configuration
   fillColors = {},
-  // fillDomain, // Array of category names
-  // fillRange, // Array of colors matching domain
   fillLabelFormatter = (d) => d,
 
   // Labels and text
@@ -1008,7 +994,7 @@ function createStackedBarChart({
       }),
     ),
     Plot.textX(
-      _data.filter((d) => d[xField] > 1), //Assume labels under 1% are too small to show well
+      _data.filter((d) => d[xField] > 3), //Assume labels under 1% are too small to show well
       Plot.stackX({
         x: xField,
         y: yField,
@@ -1023,7 +1009,7 @@ function createStackedBarChart({
     style: {
       overflow: "visible",
     },
-    title,
+    subtitle: title,
     caption,
     width,
     height: heightPerRow * numGroups,
@@ -1031,18 +1017,14 @@ function createStackedBarChart({
       axis: null,
     },
     y: {
-      axis: null,
+      label: null,
+      tickSize: 0,
     },
     color: {
       domain: fillDomain,
       range: fillRange,
       legend: true,
       label: fillLabelFormatter,
-    },
-    facet: {
-      data: _data,
-      y: yField,
-      label: null,
     },
     marks,
   });
@@ -1099,7 +1081,7 @@ povBar_keyFacts = () => {
   return createStackedBarChart({
     data: pov_plotData,
     xField: "pov_rate",
-    yField: "iso3",
+    yField: "adminName",
     fillField: "group",
     width: width,
     fillColors: {
@@ -1554,38 +1536,6 @@ bars_extremeEvents = () => {
       )
     ]
   });
-}
-```
-
-## Tooling
-
-```{ojs}
-function loaderDiv(id) {
-  return html`
-  <div id="${id}">
-    <div style="
-        min-height: 500px;
-        display: flex;
-        justify-content: center;
-        align-items: center;"
-    >
-      <div style="
-        width: 40px;
-        height: 40px;
-        border: 4px solid #ccc;
-        border-top-color: var(--atlasGreen);
-        border-radius: 50%;
-        animation: spin 0.9s linear infinite;
-      "></div>
-
-      <style>
-        @keyframes spin {
-          to { transform: rotate(360deg); }
-        }
-      </style>
-    </div>
-  </div>
-  `;
 }
 ```
 
