--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -25,6 +25,69 @@ atlasHero(nbTitle, hero_url);
 ```
 
 ```{ojs}
+//| echo: false
+
+// Floating sidebar with admin level selectors
+html`
+<style>
+.floating-sidebar {
+  position: fixed;
+  top: 120px;
+  right: 20px;
+  width: 320px;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+  max-height: calc(100vh - 140px);
+  overflow-y: auto;
+}
+
+.floating-sidebar h4 {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 16px;
+  border-bottom: 2px solid #0066cc;
+  padding-bottom: 8px;
+}
+
+.sidebar-section {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 1400px) {
+  .floating-sidebar {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+</style>
+
+<div class="floating-sidebar">
+  <h4>Region Selection</h4>
+  <div class="sidebar-section">
+    ${viewof selectedAdmin0}
+  </div>
+  <div class="sidebar-section">
+    ${viewof selectedAdmin1}
+  </div>
+  <div class="sidebar-section">
+    ${viewof selectedAdmin2}
+  </div>
+  <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
+    <strong>Current Selection:</strong><br>
+    ${breadcrumb}
+  </div>
+</div>
+`
+```
+
+```{ojs}
 overviewTitle = _lang(cis.overviewTitle);
 overviewContent = _lang(cis.overviewContent);
 
